examples/cpx-ingress-apache.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: apache
  labels:
      name: apache
spec:
  selector:
    matchLabels:
      app: apache
  replicas: 6
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apache
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: apache
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apache-ingress
  annotations:
   kubernetes.io/ingress.class: "citrix-ingress"
   ingress.citrix.com/insecure-termination: "allow"
spec:
  tls:
  - hosts:
    - apache.example.com
    secretName: apache-cert
  rules:
  - host: apache.example.com
    http:
      paths:
      - backend:
          serviceName: apache
          servicePort: 80
